--- a/email/email_service/Dockerfile
+++ b/email/email_service/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.9-slim
 
+COPY . /app
 WORKDIR /app
-COPY email_sender.py requirements.txt ./
+# COPY .env email_sender.py requirements.txt ./
 RUN pip install -r requirements.txt
 
 EXPOSE 5001
