--- a/email/docker-compose.yml
+++ b/email/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   webserver:
     build: ./webserver
@@ -7,6 +5,9 @@ services:
       - "5000:5000"
     volumes:
       - ./webserver/data:/app/data
+    depends_on:
+      email_service:
+        condition: service_started
 
   email_service:
     build: ./email_service
@@ -19,4 +20,6 @@ services:
     volumes:
       - ./data_watcher/watched_dir:/watched_dir
     depends_on:
-      - webserver
+      webserver:
+        condition: service_started
+    restart: always
